feat(reservation): Corrections to the reservation controller, service, and entity